# nornir_conditional_runner_demo

./: .gitignore  README.md  config.yaml  maintenance.py  maintenance_tasks.py  pyproject.toml
inventory/: groups.yaml  hosts.yaml
